# User-Service

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile_tests  README.md  docker-compose.yaml  openAPI.yaml  pyproject.toml
app/: consumer.py  main.py  publisher.py
app/db/: database.py
app/models/: models.py
app/tests/integration_tests/: test_integration_main.py  test_rabit.py  test_redis.py
app/tests/unit_tests/: test_main.py
hooks/: commit-msg  pre-commit  pre-receive  prepare-commit-msg
