[tool.poetry]
name = "user-service-api"
version = "0.1.0"
description = "User Service app implemented using fastAPI"
authors = ["Jakub Mioduszewski <jakub.mioduszewski@capgemini.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
fastapi = "^0.81.0"
psycopg2 = "^2.9.3"
databases = "^0.6.1"
asyncpg = "^0.26.0"
sqlmodel = "^0.0.8"
fastapi-redis-cache = "^0.2.5"
aio-pika = "^8.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pylint = "^2.15.0"
uvicorn = "^0.18.3"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
